fix(docs): corrigir documentos das etapas 2 e 3